add dependencies to pom